# quant-hs

./: .gitignore  LICENSE  README.md  package.yaml  quant-hs.cabal  stack.yaml  watchlist.json
app/: Main.hs
src/: Analysis.hs  Data.hs  Recommendation.hs  Types.hs
stock_data_fetcher/: README.md  main.py  pyproject.toml
test/: Spec.hs
