[project]
name = "stock-data-fetcher"
version = "0.1.0"
description = "Stock fetcher from yfinance"
authors = [
    { name = "janpaulpl", email = "mail@janpaul.pl" }
]
dependencies = [
    "yfinance>=0.2.46",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stock_data_fetcher"]
